@@ -14,5 +14,6 @@ The items are sorted inversely, i.e. lastest items are on top
   - Cop.toString() and Resource.toString() do not return a usable url anymore, use new method toURL()
   - Cop.toURL() and Cop.toAbsolute() do not call response.encodeURL anymore
   - toURL() and toAbsolute() on classes Cop and Resource do need a parameter HttpServletRequest
+  - rename method toAbsolute to getAbsoluteURL
 * updated jspm library to build.14, added getlib.properties and check.version target to getlib.xml
 
